# Perimeter

./: .dockerignore  .gitignore  CMakeLists.txt  INSTALL.eng.md  MODDING.eng.md  README.md  REAME.eng.md  build.cmd  default.nix  flake.nix  perimeter.nix  shell.nix  vcpkg.json
Source/: .gitignore  CMakeLists.txt  Config.ini  DefaultPlayer.ini  Game.dsp  Game.vcproj  GameDBG.exp  GameDBG.lib  MissionEdit.bat  PSvr.ini  Perimeter.dsw  Perimeter.ini  Perimeter.spp  PerimeterAddon.sln  PerimeterAddon.vskdb  PerimeterAddon.vsksln  PerimeterET.exp  PerimeterET.lib  Scripts.vcproj  Steam rich presence.vdf  TriggerEditor.bsc  TriggerEditor.exp  TriggerEditor.lib  afxres.h  game.bat  network.ini  perimeter.rc  resource.h  version.cpp  version.h
Source/AI/: AIAStar.h  AIMain.cpp  AIMain.h  AIPrm.h  AITileMap.cpp  AITileMap.h  AiBuilding.cpp  CMakeLists.txt  ClusterFind.cpp  ClusterFind.h  PlaceOperators.h  PositionGenerator.h
Source/Configurator/: CMakeLists.txt  CollectLangDirs.cpp  Configurator.dsp  Configurator.h  Configurator.rc  Configurator.sln  CurDirSafer.cpp  CurDirSafer.h  IniReader.cpp  file_enumerator.h  qd_textdb.cpp  qd_textdb.h
Source/EFFECTTOOL/: AlphaEditDlg.h  ColorKeyControl.cpp  ColorKeyControl.h  Config.ini  ControlView.cpp  D3DScene.cpp  D3DScene.h  D3DWindow.cpp  DlgBar.cpp  DlgBar.h  DlgLoadSprite.cpp  DlgLoadSprite.h  DrawGraph.cpp  DrawGraph.h  DrawInfo.cpp  EffectStorage.cpp  EffectTool.h  EffectToolDoc.cpp  EffectToolDoc.h  EffectToolView.h  EffectTreeView.cpp  MainFrm.cpp  OptTree.cpp  OptTree.h  ReadMe.txt  StdAfx.cpp  StdAfx.h
Source/EasyMap/: EasyMap.cpp  EasyMap.dsp  EasyMap.vcproj  Runtime3D.cpp  Runtime3D.h  StdAfx.cpp  StdAfx.h  easymap.icproj  runtime.h
Source/Exodus/: CMakeLists.txt  commctrl.h  d3dx9.cpp  d3dx9.h  d3dx9math.cpp  d3dx9math.h  ddraw.h  direct.h  dplay8.h  dsound.h  exodus.cpp  exodus.h  msvc.h  windows.h
Source/Game/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  Config.cpp  Config.h  ConfigPro.cpp  CopyToGraph.cpp  GameContent.cpp  GameContent.h  MonkManager.cpp  MonkManager.h  MusicManager.cpp  MusicManager.h  PerimeterDataChannel.cpp  PlayBink.cpp  PlayBink.h  Player.cpp  Player.h  Region.cpp  Region.h  ResourceDispatcher.cpp  ResourceDispatcher.h  Runtime.cpp  Runtime.h  StdAfx.cpp  StdAfx.h  Texts.cpp  Texts_en.h  Texts_ru.h  Universe.cpp  Universe.h  VideoPlayer.cpp  VideoPlayer.h  qd_textdb.cpp  qd_textdb.h
Source/GeoLogic/: CMakeLists.txt  GeoLogic.dsp  LineAntiAlias.cpp  TerraCleft.cpp  TerraCleft.h
Source/GeoTool/: ActionNode.cpp  ActionNode.h  BrushDialog.cpp  BrushDialog.h  ChildView.cpp  ColorMapManager.cpp  ColorMapManager.h  GeoTool.cpp  GeoTool.dsw  GeoTool.rc  InstrumentsDialog.h  LoadMapDialog.cpp  LoadMapDialog.h  LocationNode.cpp  MainFrm.cpp  MainFrm.h  ModelNode.cpp  ModelNode.h  Node.cpp  Node.h  PreviewDialog.cpp  PreviewDialog.h  Rect4i.h  Runtime.cpp  Runtime.h  Slot.h  SlotButton.h  SlotManager.h  SlotMenu.cpp  SlotMenu.h  SlotPropertiesDialog.cpp  SlotPropertiesDialog.h  Slots.cpp  Slots.h  StdAfx.cpp  StdAfx.h  TextureNode.cpp  TreeManager.h  Updater.h  VMapOperator.cpp  (+1 more)
Source/HT/: CMakeLists.txt  LagStatistic.cpp  LagStatistic.h  StreamInterpolation.cpp  StreamInterpolation.h  ht.cpp  ht.h  mt_config.h
Source/IGameExporter/: 3dx.h  AddAnimationChain.cpp  AddAnimationChain.h  AddChainGroup.cpp  AddChainGroup.h  AnimationChain.cpp  AnimationChain.h  AnimationData.cpp  AnimationData.h  AnimationGroup.cpp  AnimationGroup.h  CWnd.cpp  CWnd.h  Console.h  DebugDlg(1).cpp  DebugDlg(1).h  DllEntry.cpp  ExportMaterial(1).cpp  ExportMaterial.cpp  ExportMesh(1).cpp  ExportMesh.cpp  ExportMesh.h  IGameExporter.cpp  IGameExporter.rc  IGameExporter.sln  IGameExporter.vcproj  Interpolate.cpp  Interpolate.h  InvertMatrix.cpp  RootExport.cpp  StdAfx.cpp  StdAfx.h  doc.txt  exporter3dx.def  think.txt
Source/Integrations/: CMakeLists.txt  integrations.cpp  integrations.h
Source/Network/: CMakeLists.txt  CommonCommands.cpp  CommonCommands.h  CommonEvents.cpp  CommonEvents.h  ConnectionDP.cpp  ConnectionDP.h  EventBufferDP.cpp  EventBufferDP.h  GS_interface.cpp  GS_interface.h  HyperSpace.cpp  HyperSpace.h  NetComEventBuffer.cpp  NetComEventBuffer.h  NetConnection.cpp  NetConnection.h  NetConnectionAux.h  NetConnectionHandler.cpp  NetID.h  NetIncludes.h  NetPlayer-1251-1.inl  NetPlayer-1251-2.inl  NetPlayer.h  NetRelay.cpp  NetRelay.h  NetRelaySerialization.h  P2P_interface.h  P2P_interface1Th.cpp  P2P_interface2Th.cpp  P2P_interface2ThDPF.cpp  P2P_interface2ThSDL.cpp  P2P_interface2Th_Host.cpp  P2P_interface2Th_NetConn.cpp  P2P_interface3Th.cpp  P2P_interface3ThDP.cpp  P2P_interface3ThSDL.cpp  P2P_interfaceAnyTh.cpp  P2P_interfaceAux.h  ServerList.cpp  (+3 more)
Source/Physics/: CMakeLists.txt  Missile.cpp  MultiBodyDispatcher.cpp  Mutation.cpp  Mutation.h  RigidBody-1251.inl  RigidBody.cpp  RigidBody.h  RigidBodyPrm.h  Rocket.cpp
Source/PlayOgg/: CMakeLists.txt  PlayOgg.cpp  PlayOgg.dsp  PlayOgg.h  PlayOgg.sln
Source/PluginMAX/: CMakeLists.txt  PluginMAX.vcproj  SceneMesh.cpp  SceneMesh.h  ZIPStream.cpp  ZIPStream.h  m3d.txt  zip_headers.h  zip_resource.cpp  zip_resource.h
Source/Port/: CMakeLists.txt  CTreeListCtrl.cpp  playogg2.cpp  prmedit.cpp  timer_data.cpp  tree.cpp  xbuffer.cpp  xmath.cpp  xstream.cpp  xutil.cpp
Source/Render/: CMakeLists.txt  Render.vcproj  stack.cpp
Source/Scripts/: !surMap5cfg.scr  AI.prm  AttributeLibrary  CMakeLists.txt  Config.prm  Damage.inl  Filth.prm  ForceField.prm  GameBalance.inl  GameShellSq.prm  GlobalAttributes  InterfaceAttributes  InterfaceScriptExport.prm  InterfaceTV.inl  Models.inl  Mutation.prm  Region.prm  RigidBody.prm  RigidBodyPrmLibrary  Save.dic  Save.prm  Silicon.prm  Sound.inl  SoundScript.prm  SoundScriptTable  SquadLogic.inl  SquadShellEnums.inl  Texts.tdb  ToolzerEnums.inl  Toolzers.inl  UnitAnimation.inl  UnitAttribute.inl  UnitAttribute.prm  UnitDynamics.inl  UnitInterface.inl  UnitLogic.inl  interfaceTV.inl
Source/Sound/: AudioPlayer.cpp  AudioPlayer.h  C3D.cpp  C3D.h  CMakeLists.txt  Instruction.txt  PerimeterSound.cpp  PerimeterSound.dsp  (+23 more)
(+7863 files in other folders)
